--- a/list.html
+++ b/list.html
@@ -1,5 +1,40 @@
 <!DOCTYPE html>
 <html>
+  <style type="text/css">
+    body {
+        background-color: #111315;
+    }
+    h2 { 
+        font-family: 'Grato Grotesk';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 24px;
+        color: #FFFFFF;
+        padding: 12px 16px;
+       }
+    ul {
+        font-family: 'Grato Grotesk';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 24px;
+        color: #FFFFFF;
+        padding: 12px 16px;
+        list-style: circle;
+    }
+    ol {
+        font-family: 'Grato Grotesk';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 24px;
+        color: #FFFFFF;
+        padding: 12px 16px;
+        list-style:lower-roman;
+    }
+  </style>
+
 <body>
 
 <h2>Unordered (дугаарлагдаагүй)</h2>
