--- a/paragraphs.html
+++ b/paragraphs.html
@@ -1,18 +1,50 @@
 <!DOCTYPE html>
 <html>
+  <style type="text/css">
+     body {
+        background-color: #111315;
+    }
+    h1 {
+        font-family: 'Grato Grotesk';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 24px;
+        color: #FFFFFF;
+        padding: 12px 16px;
+    }
+    h2 {
+        font-family: 'Grato Grotesk';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 24px;
+        color: #FFFFFF;
+        padding: 12px 16px;
+    }
+    p{
+      font-family: 'Grato Grotesk';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 24px;
+        color: #FFFFFF;
+        padding: 12px 16px;
+    }
+  </style>
 <head>
 <title>HTML introduction</title>
 </head>
 <body>
 
-<h1>HTML Introduction (heading)</h1>
-<h2>What is HTML? (heading2)</h2>
+<h1>HTML Introduction</h1>
+<h2>What is HTML?</h2>
 <p>HTML stands for Hyper Text Markup Language
 HTML is the standard markup language for creating Web pages
-HTML describes the structure of a Web page (paragraph1)</p>
-<p>-HTML consists of a series of elements
--HTML elements tell the browser how to display the content
--HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link", etc.(paragraph2) </p>
+HTML describes the structure of a Web page</p>
+<p>HTML consists of a series of elements
+HTML elements tell the browser how to display the content
+HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link", etc. </p>
 
 </body>
 </html>
